# unicode-language-rs

./: .gitmodules  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: build.yml
src/: lib.rs
