[package]
name = "unicode-language"
version = "1.0.0"
edition = "2021"
build = "build.rs"
license = "Apache-2.0"
keywords = ["unicode", "language"]
description = "A library to detect language coverage given a list of codepoints."
authors = ["Bram Stein <b.l.stein@gmail.com>"]

[lib]
name = "unicodelanguage"
path = "src/lib.rs"

[build-dependencies]
glob = "0.3.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.9.25"
